# SetOptics

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.sh
docs/: agent-quickstart.md  annotation.md  api-keys.md  architecture.md  rally-detection.md  setup.md  training.md
models/: README.md
scripts/: ensemble_rally_detector.py  ensemble_rally_evaluate.py  export_rallies.py  infer_rally_detector.py  signal_rally_detector.py  signal_rally_evaluate.py  signal_rally_visualize.py  train_volleyball_yolo.py  validate_ball_tracking.py
setoptics/: __init__.py  ball_tracker.py  gemini_pipeline.py  gemini_rally_detector.py  prompts.py  rally_detector_base.py
tools/annotation/: annotate_fast.py  annotate_sliding_window.py  audio_utils.py  config.yaml  eval_sliding_window.py  evaluate.py  export_clips.py  prompts.py  requirements.txt  utils.py
tools/shared/eval/: frame_classification.py  set_detection.py  temporal.py
tools/shared/providers/: __init__.py  base.py  google_provider.py
